# nexus-dev-toolkit

./: .gitignore  .graphifyignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  nexus_cli.py  nexus_server.py  pyproject.toml
.github/workflows/: publish.yml  test.yml
public/: docs.html  index.html  install.sh  workflow.html
tests/: test_cli.py  test_server.py
tools/agents/: code-reviewer.md  database-reviewer.md  deployment-reviewer.md  monitoring-reviewer.md  performance-reviewer.md
tools/epav/: __init__.py  arch_ingest.py  package_resolver.py  project_rules.py  task_loader.py
tools/epav/skills/: apply.md  code-review.md  database-review.md  deployment-review.md  epav.md  evaluate.md  monitoring-review.md  performance-review.md  plan.md  scaffold.md  validate.md
tools/sync/: __init__.py  claude.py  copilot.py  cursor.py  detect.py  windsurf.py
