[project]
name = "nexus-dev-toolkit"
version = "3.1.0"
description = "Developer workflow toolkit for Claude Code — Day 0 scaffold + Day 1 EPAV"
authors = [
    {name = "Ronald dela Cruz", email = "rcdelacruz@users.noreply.github.com"}
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.27.1",
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[project.scripts]
nexus = "nexus_cli:main"
nexus-mcp = "nexus_server:main"

[project.urls]
Homepage = "https://nexus.coderstudio.co"
Documentation = "https://nexus.coderstudio.co/docs"
Repository = "https://github.com/rcdelacruz/nexus-dev-toolkit"
Issues = "https://github.com/rcdelacruz/nexus-dev-toolkit/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["nexus_server", "nexus_cli"]

[tool.setuptools.packages.find]
where = ["."]
include = ["tools*"]

[tool.setuptools.package-data]
"tools.epav" = ["skills/*.md"]
"tools.agents" = ["*.md"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
